@@ -14,3 +14,5 @@ module main {
     exports frontend_package.components;
     opens frontend_package.components to javafx.fxml;
 }
+
+//java --module-path "C:\Users\damia\Downloads\openjfx-21.0.2_windows-x64_bin-sdk\javafx-sdk-21.0.2\lib" --add-modules javafx.controls,javafx.fxml -jar Trivia_Game.jar
